--- a/app/src/main/res/layout/fragment_users.xml
+++ b/app/src/main/res/layout/fragment_users.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#DCD8D8"
     android:orientation="vertical">
 
@@ -131,9 +132,17 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_hourly"
+                android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_daily"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/day_item"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"/>
 
     </LinearLayout>
 
