--- a/app/src/main/res/layout/fragment_day_info.xml
+++ b/app/src/main/res/layout/fragment_day_info.xml
@@ -4,6 +4,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/design_default_color_primary" />
+
     <TextView
         android:id="@+id/tv_day"
         android:layout_width="match_parent"
