--- a/app/src/main/res/layout/fragment_day_info.xml
+++ b/app/src/main/res/layout/fragment_day_info.xml
@@ -16,7 +16,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:gravity="center"
-        android:text="text" />
+        android:textSize="18sp"/>
 
     <ImageView
         android:id="@+id/iv_weatherIco"
@@ -29,7 +29,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-
         android:orientation="horizontal">
 
         <TextView
@@ -38,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="text" />
+            android:textSize="18sp"/>
 
         <TextView
             android:id="@+id/tv_tempMin"
@@ -46,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="text" />
+            android:textSize="18sp"/>
     </LinearLayout>
 
     <LinearLayout
@@ -62,7 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="text" />
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/tv_dailyHumidity"
@@ -70,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="text" />
+        android:textSize="18sp"/>
 
     <TextView
         android:id="@+id/tv_dailyRain"
@@ -78,7 +77,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="text" />
+        android:textSize="18sp"/>
 
     </LinearLayout>
 
