--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -35,7 +35,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="City"
                     android:textSize="30sp" />
 
                 <TextView
@@ -44,7 +43,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="10dp"
                     android:gravity="center"
-                    android:text="upd"
                     android:textSize="10sp" />
 
                 <LinearLayout
@@ -58,7 +56,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="sunrise"
                         android:textSize="16sp" />
 
                     <ImageView
@@ -73,7 +70,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="sunset"
                         android:textSize="16sp" />
 
                 </LinearLayout>
@@ -89,7 +85,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="temp"
                         android:textSize="20sp" />
 
                     <TextView
@@ -98,7 +93,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:text="hum"
                         android:textSize="20sp" />
                 </LinearLayout>
 
@@ -114,7 +108,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="wind"
                         android:textAlignment="center"
                         android:textSize="20sp" />
 
@@ -123,7 +116,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Pressure"
                         android:textAlignment="center"
                         android:textSize="20sp" />
                 </LinearLayout>
@@ -157,9 +149,11 @@
                 android:layout_margin="16dp">
 
                 <LinearLayout
+                    android:id="@+id/ll_hourly"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="invisible">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -175,7 +169,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_hourly"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal" />
             </LinearLayout>
