--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,14 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="qwe">#00BCD4</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+
+    <color name="scrim_blue">#87B6FC</color>
+    <color name="scrim_yellow">#FDC787</color>
+    <color name="scrim_dark_gray">#2F3D54</color>
+    <color name="scrim_gray">#898989</color>
+    <color name="collapsing_toolbar_text_color"></color>
 </resources>
