--- a/app/src/main/res/layout/weather_widget.xml
+++ b/app/src/main/res/layout/weather_widget.xml
@@ -6,43 +6,151 @@
     android:theme="@style/Theme.Weather_Kotlin.AppWidgetContainer">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_weight="2"
+            >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/tv_update"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="10sp" />
+
+                <TextView
+                    android:id="@+id/tv_city"
+                    android:layout_marginStart="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_currentImg"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    app:srcCompat="@drawable/w01d" />
+
+                <TextView
+                    android:id="@+id/tv_currentTemp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:text="+23"
+                    android:textSize="30sp" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tv_firstTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/widget_text_size" />
+
             <ImageView
-                android:id="@+id/iv_currentImg"
+                android:id="@+id/iv_firstImg"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center_horizontal"
-                app:srcCompat="@drawable/w01d" />
+                app:srcCompat="@drawable/w01d"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
+                />
 
             <TextView
-                android:id="@+id/tv_currentTemp"
+                android:id="@+id/tv_firstTemp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="+23" />
+                android:text="+23"
+                android:textSize="@dimen/widget_text_size" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/appwidget_text"
-            style="@style/Widget.Weather_Kotlin.AppWidget.InnerView"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:contentDescription="@string/appwidget_text"
-            android:text="@string/appwidget_text"
-            android:textSize="24sp"
-            android:textStyle="bold|italic" />
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_secondTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/widget_text_size" />
+
+            <ImageView
+                android:id="@+id/iv_secondImg"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/w01d"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
+
+            <TextView
+                android:id="@+id/tv_secondTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+23"
+                android:textSize="@dimen/widget_text_size" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_thirdTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/widget_text_size" />
+
+            <ImageView
+                android:id="@+id/iv_thirdImg"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal"
+                app:srcCompat="@drawable/w01d"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
+
+            <TextView
+                android:id="@+id/tv_thirdTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="+23"
+                android:textSize="@dimen/widget_text_size" />
+        </LinearLayout>
+
 
     </LinearLayout>
 </RelativeLayout>
