--- a/app/src/main/res/xml/weather_widget_info.xml
+++ b/app/src/main/res/xml/weather_widget_info.xml
@@ -7,6 +7,6 @@
     android:minWidth="250dp"
     android:minHeight="40dp"
     android:previewImage="@drawable/example_appwidget_preview"
-    android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+    android:resizeMode="horizontal"
+    android:updatePeriodMillis="3600000"
     android:widgetCategory="home_screen" />
