--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -133,6 +133,22 @@
                             android:layout_weight="1"
                             android:textAlignment="center"
                             android:textSize="20sp" />
+                        <TextView
+                            android:id="@+id/mainRain"
+                            style="@style/FontColor"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textAlignment="center"
+                            android:textSize="20sp" />
+                        <TextView
+                            android:id="@+id/mainSnow"
+                            style="@style/FontColor"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:textAlignment="center"
+                            android:textSize="20sp" />
                     </LinearLayout>
                 </LinearLayout>
 
